Alliance card updates - Fix stretched out logos - Center all content in cards

--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -153,6 +153,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     margin: 30px;
     padding: 20px;
     /* try to make the cards smaller*/
@@ -163,12 +164,12 @@
     box-shadow: 0px 5px 20px 1px rgba(0, 0, 0, 0.4);
 }
 
-/* FIX PICTURE SIZE AND CONTENT MARGIN/PADDING */
 .alliance-university-logo {
+    /* FIX PICTURE SIZE AND CONTENT MARGIN/PADDING */
     display: flex;
     justify-content: center;
-    align-content: center;
-    height: 50%;
+    align-items: center;
+    width: 50%;
 }
 
 .alliance-university-logo img {
